--- a/big_task_2/index.html
+++ b/big_task_2/index.html
@@ -48,7 +48,9 @@
             <div class="banner__column box">
                 <h1 class="banner__title">You can be sure your cargo<br> will arrive on time</h1>
                 <p class="banner__desc">RusWay acts as a guarantor of reliability and professionalism!</p>
+                <div class="banner__action__second">
                 <a href="" class="banner__order_call bttn">Order a call</a>
+                 <div class="banner__action__second">
                 <div class="banner__action">
                     <div class="banner__action__first">
                         <div class="banner__action__block_input">
@@ -67,7 +69,7 @@
                         </div> 
                     </div>
                     <div class="banner__action__second">
-                        <a href="" class="bttn">Order a call</a>
+                        <a href="" class="bttn">Calculate</a>
                     </div>
                 </div>
             </div>
@@ -222,7 +224,7 @@
 
 
                     <div class="industry__block" style="background-image: url('../images/Rectangle122.png');">
-                        <img class="industry__image" src="images/icon/truck.png" alt="">
+                        <img class="industry__image" src="images/icon/customs-clearance1.png" alt="">
                         <p>Customs and Logistics</p>
                     </div>
 
